x2goclient (3.99.1.1-0~x2go1) UNRELEASED; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.1.1):
    - not including <netinet/in.h> on Q_OS_WIN platform.
    - not updating Xinerama configuration in "fullscreen" mode.
    - command line argument "--xinerama": use Xinerama by default.

  [ Mike Gabriel ]
  * New upstream version (3.99.1.1):
    - Update copyright year in about window. Including all translations.

  [ Daniel Lindgren ]
  * New upstream version (3.99.1.1):
    - Update/improve Swedish translation after testing x2goclient on Windows.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Feb 2012 15:11:58 +0100

x2goclient (3.99.1.0-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.1.0):
    - Update German translation file (thanks to Stefan Baur).
    - Build .qm translation files on the fly during build.
    - Fix for zh_TW translation: add qt_zh_TW.qm file from Qt4.8.
    - Add language property to the French translation file.
    - Update qt_<LANG>.qm files from Qt4.8 (as in current Debian sid).
    - Rename x2goclient_nb.ts to x2goclient_nb_no.ts.
    - Update all translation files (lupdate), translate unfinished translation
      tags in x2goclient_de.ts.
    - Provide empty translation file x2goclient_en.ts.
    - Fix misspelled word ,,Authentification'' -> ,,Authentication''.
    - Fix misspelled word ,,recieved'' -> ,,received''.
    - Update date and release version in man page.

  [ Mihai Moldovan ]
  * New upstream version (3.99.1.0):
    - Mac OS patch: Raise the stack space to 2MB for secondary threads. It
      previously used the 512KB system default.

  [ Daniel Lindgren ]
  * New upstream version (3.99.1.0):
    - Add Swedish translation file.
    - Fine-tune Swedish translation file.

  [ Terje Andersen ]
  * New upstream version (3.99.1.0):
    - Add Norwegian (Bokmal) translation. Qt4 lacks Norwegian/Bokmal
      support, so some of the widgets may stay in English.