@@ -12,6 +12,7 @@
        <file>png/ico_mini.png</file>
        <file>png/sess_ico.png</file>
        <file>png/ico_440x180.png</file>
+       <file>png/power-button.png</file>
        <file>icons/128x128/x2go.png</file>
        <file>icons/128x128/x2gosession.png</file>
        <file>icons/128x128/create_file.png</file>
